--- a/src/Compunent/Card/Card.css
+++ b/src/Compunent/Card/Card.css
@@ -45,7 +45,15 @@
     border-radius: 0px 0px 8px 8px;
     position: absolute;
     bottom: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .card-body button:hover{
     background-color: #ff9900ad;
+}
+#sopinglogo{
+    height: 24px;
+    width: 21.429px;
+    color: #000;
 }
