--- a/src/Compunent/Shop/Shop.css
+++ b/src/Compunent/Shop/Shop.css
@@ -11,6 +11,9 @@ grid-template-columns: 3fr 1fr;
     gap: 20px;
     margin: 20px;
 }
+.order-summary{
+    padding: 10px;
+}
 @media screen and (max-width: 1260px)  {
     .card{
         display: grid;
@@ -19,4 +22,11 @@ grid-template-columns: 3fr 1fr;
         justify-content: space-around;
     }
     
+}
+@media screen and (max-width: 360px) {
+    .card{
+        display: grid;
+        grid-template-columns: 1fr ;
+        justify-content: space-around;
+    }
 }
