--- a/src/Compunent/Header/Header.css
+++ b/src/Compunent/Header/Header.css
@@ -4,8 +4,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+}
+.nevber img{
     padding-left: 112px;
-    padding-right: 112px;
+}
+.menu{
+    padding-right: 112px; 
 }
 .nevber .menu a{
    text-decoration: none;
@@ -18,4 +23,20 @@
 .nevber .menu a:hover{
     color: chocolate;
     
+}
+
+@media screen and (max-width: 460px) {
+    .nevber img{
+        padding-left: 12px;
+    }
+    .menu{
+        padding-right: 12px; 
+    }
+    .nevber .menu a{
+        text-decoration: none;
+         margin-right: 5px;
+         font-size: 10px;
+         font-weight: 400;
+         color: #FFF;  
+     }
 }
